doc/html/mkdoc.css
/* mkdoc-config: html_navlinks 1 */
/* mkdoc-config: html_nestlinks 1 */

/*********** header & footer */

html,body {
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 11pt;
  color: black;
  margin: 0px;
  height: 100%;
}

.headlogo {
  float: left;
  vertical-align: middle;
  padding: 0px 20px 0px 0px;
}

.navlinks {
  padding: 7px 15px;
  float: right;
  background: #e8f0ff;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: #d0e0ff;
}

.nestlinks {
  padding: 7px 15px;
  color: #203080;
  background: #e8f0ff;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: #d0e0ff;
}

.headlinks {
  padding: 7px 15px;
  background:#203080;
  color:#203080;
}

.headlinks a:link, .headlinks a:visited {
  color: white;
}

.head {
  display: block;
  font-size: 80%;
}

.content {
  background: white;
  padding: 20px 15px 80px 15px;
}

.page
{
  position: relative;
  min-height: 100%;
  background: white;
}

* html .page
{
  height: 100%;
}

.foot {
  height: 46px;
  padding: 7px 15px;
  background: #e8f0ff;
  font-size: 80%;
  position: relative;
  margin-top: -60px;
  border-top-style: solid;
  border-top-width: 1px;
  border-top-color: #d0e0ff;
}

/*********** misc */

a:link, a:visited {
  text-decoration: none;
  color: #203080;
}

.ext_link a:link, .ext_link a:visited {
  color: #206080;
}

ul {
  list-style-type: disc;
}

hr {
  margin: 20px 0px;
}

.center {
  text-align: center;
}

.warning {
  font-weight: bold;
  color: red;
}

.nodoc {
  color: gray;
  font-style: italic;
}

.tt {
  font-family: monospace;
}

.sec_content2, .sec_content3, .sec_content4,
.sec_content5, .sec_content6 {
  display: block;
  padding: 0px 30px;
  margin-bottom: 20px;
}

/*********** titles */

h1 {
  text-align: center;
}

.subtitle {
  font-size: smaller;
}

.hover_link:hover {
    content: " [link]";
}

div.sec_hidden {
    display: none;
}
div.sec_shown {
}

/*********** index */

.index {
 width : 100%;
}

/*********** tables */

.table {
 width : 100%;
 text-align: left;
 background: #c0d0ff;
 border-spacing: 0px;
 margin: 5px 0px;
 border-radius: 8px 8px 0px 0px;
 -moz-border-radius: 8px 8px 0px 0px;
}

.table_caption {
  width: 100%;
  font-style: italic;
}

.table_frame {
  text-align: center;
  font-size: 10pt;
  margin: 20px 0px;
}

.table td {
  padding: 3px 10px;
  border-top-style: solid;
  border-top-width: 1px;
  border-color: white;
}

.table th {
  padding : 3px 10px;
  text-align: left;
}

.table .tr0 {
  background-color : #e8f0ff;
}

.table .tr1 {
  background-color : #ecf4ff;
}

/*********** images */

.img_caption {
  width: 100%;
  font-style: italic;
}

.img_frame {
  text-align: center;
  font-size: 10pt;
  margin: 20px 30px;
}

/*********** tree */

.tree_frame {
  display: block;
  padding: 0px;
  margin-left: auto;
  margin-right: auto;
}

.tree_default, .tree_public, .tree_protected,
.tree_private, .tree_inaccessible, .tree_this,
.tree_derived {
  height: 100%;
  min-height: 100%;
  border-radius: 8px;
 -moz-border-radius: 8px;
  padding: 2px 0px 0px 0px;
  display:inline-block;
  vertical-align: middle;
  text-align: center;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_row {
  padding: 0px;
  margin: 0px;
  display:inline-block;
}

.tree_default, .tree_public {
  border: solid;
  border-color: #b8c8f8;
  background: #e8f0ff;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_protected {
  border: solid;
  border-color: #e0d0a0;
  background: #ffffd0;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_private {
  border: solid;
  border-color: #e0a0a0;
  background: #ffe8e8;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_inaccessible {
  border: dashed;
  border-color: #e0a0a0;
  background: white;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_derived {
  border: solid;
  border-color: #d0d0d0;
  background: #f8f8f8;
  border-width:      1px;
  margin:       0px -1px;
}

.tree_this {
  border: solid;
  border-width:      2px;
  margin:       0px -2px;
  border-color: #4080e0;
  background: #f8f8ff;
}

.tree_connect_1, .tree_connect_2,
.tree_connect_3, .tree_connect_4 {
  height:16px; 
  padding: 0px;
  display:inline-block;
  vertical-align: middle;
  font-size: 60%;
}

.tree_connect_1, .tree_connect_2,
.tree_connect_3 {
  border: solid;
  border-color: gray;
  border-style: dashed;
}

.tree_connect_1 {
  border-width: 0px 1px 0px 0px;
  margin: 0px -1px 0px 0px;
}

.tree_connect_2 {
  border-width: 1px 1px 0px 0px;
  margin: -1px -1px 0px 0px;
}

.tree_connect_3 {
  border-width: 0px 1px 1px 0px;
  margin: 0px -1px -1px 0px;
}

.tree_pad {
  vertical-align: middle;
  display:inline-block;
  padding: 0px;
  margin: 0px;
}

/*********** code */

.codebox {
  font-family: monospace;
  white-space: pre;
  border: solid;
  border-width: 1px 0px;
  border-color: #c0d0ff;
  background: #e8f0ff;
  padding: 15px;
  margin: 5px 0px;
}

.codedecl {
  font-family: monospace;
}

.codenum {
  color: gray;
  font-style: italic;
}

.codecmt {
  display: inline;
  color: #c00000;
}

.codekw {
  color: #00b0b0;
}

.codetype {
  color: #00b000;
}

.codestr {
  color: #00d000;
}

.codedir {
  color: #0000d0;
}

/*********** member details */

.divmember h1, .divmember h2, .divmember h3,
.divmember h4, .divmember h5, .divmember h6 {
  white-space: pre;
  margin: 0px;
  font-size: 120%;
}

.divmember {
  display: block;
  border-top: solid;
  border-top-width: 2px;
  border-radius: 0px 0px 8px 8px;
  -moz-border-radius: 0px 0px 8px 8px ;
  padding: 2px 10px;
  margin-top: 40px;
}

.public_member {
  border-top-color: #c0d0ff;
  background: #e8f0ff;
}

.protected_member {
  border-top-color: #e0d0a0;
  background: #ffffd0;
}

.private_member {
  border-top-color: #e0a0a0;
  background: #ffe8e8;
}

.slot_member {
  border-top-color: #a0e0c0;
  background: #e8fff8;
}

.signal_member {
  border-top-color: #a0e0c0;
  background: #e8fff8;
}

/*********** member list */

.listitem_pure {
  font-style: italic;
}

.function_prefix {
    display: inline-block;
    min-width: 230px;
}

.function_name {
    margin-right: 10px;
}

.variable_prefix {
    display: inline-block;
    min-width: 230px;
}

.field_prefix {
    display: inline-block;
    min-width: 230px;
}

.decl_short_desc {
  color: gray;
  font-style: italic;
  display: block;
  margin: 0px 0px 5px 20px;
  font-size: 80%;
}

